# CookieCutterCMake

./: cookiecutter.json
{{cookiecutter.directory_name}}/: CMakeLists.txt
{{cookiecutter.directory_name}}/Demo/: CMakeLists.txt
